--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -15,3 +15,4 @@ ul.list-group
         h6.my-auto 휴대폰 번호
   - @users.each do |user|
     = render partial: "user", locals: {user: user}
+  = paginate @users
