유저 상세정보 추가 및 기본 i18n ko로 변경

--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -1,4 +1,4 @@
-h2.font-weight-bolder 유저목록 (#{User.all.count})
+h2.font-weight-bolder.mb-4.mt-1 유저 리스트 (#{User.all.count})
 ul.list-group
   li.list-group-item.list-group-item-dark
     .d-flex.flex-row
