--- a/app/views/layouts/_admin_nav.html.slim
+++ b/app/views/layouts/_admin_nav.html.slim
@@ -1,5 +1,6 @@
-nav.navbar.navbar-expand-lg.mb-3.bg-dark
-  .col-lg-9.mx-auto
-    ul.nav
+nav.navbar.navbar-expand-lg.mb-3.bg-dark.navbar-dark
+  .col-lg-9
+    ul.navbar-nav
       li.nav-item.my-auto
-        = link_to "유저정보", admin_users_path, class: "nav-link active"
+        .d-flex.flex-row
+          = view_nav_link("유저정보", admin_users_path)
