--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,9 +13,9 @@ html
 
 
   body
-    - if current_user.present?
-      = render partial: 'layouts/admin_nav'
     .container-fluid
       .row
-        .col-lg-9.mx-auto
-          = yield
+        .col-lg-9.col-md-12.col-sm-12.mx-auto
+          - if current_user.present?
+            = render partial: 'layouts/admin_nav'
+            = yield
