comment model에 타임스탬프 추가 및 어드민페이지 네비바에 회원로그기록 탭 추가

--- a/app/views/layouts/_admin_nav.html.slim
+++ b/app/views/layouts/_admin_nav.html.slim
@@ -4,3 +4,4 @@ nav.navbar.navbar-expand-lg.mb-3.bg-dark.navbar-dark
       li.nav-item.my-auto
         .d-flex.flex-row
           = view_nav_link("유저정보", admin_users_path)
+          = view_nav_link("회원 로그기록", admin_comments_path)
